--- a/PROJECTS/Form/style.css
+++ b/PROJECTS/Form/style.css
@@ -2,10 +2,11 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 body {
-    background-image: url('https://images.pexels.com/photos/735277/pexels-photo-735277.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+    /* background-image: url('https://images.pexels.com/photos/735277/pexels-photo-735277.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); */
     background-repeat: no repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -35,7 +36,7 @@ body {
 
 .info-wrap {
     width: 35%;
-    height: 80vh;
+    height: 90vh;
     padding: 40px;
     float: left;
     display: block;
@@ -122,11 +123,11 @@ body {
 
 .form-wrap {
     width: 65%;
-    height: 80vh;
+    height: 90vh;
     float: right;
     padding: 40px 25px 35px 25px;
     border-radius: 0px 30px 30px 0px;
-    background: #ecf0f3;
+    background: #fffdf8;
 }
 
 .form-title {
@@ -146,11 +147,12 @@ body {
 
 .form-fields input,
 .form-fields textarea {
+    text-transform: uppercase;
     border: none;
     outline: none;
     background: none;
-    font-size: 18px;
-    color: #555;
+    font-size: 12px;
+    color: #00031b;
     padding: 20px 10px 20px 5px;
     width: 100%;
 }
@@ -176,7 +178,7 @@ body {
 .submit-button {
     width: 96%;
     height: 9vh;
-    margin: 20px 12px;
+    margin: 2px 12px;
     border-radius: 30px;
     font-size: 20px;
     font-weight: 500;
@@ -186,13 +188,13 @@ body {
     cursor: pointer;
     color: #fff;
     text-align: center;
-    background: #49025f;
+    background: #49025fdf;
     box-shadow: 2px 3px 8px #7d7a7a, -3px -3px 8px white;
     transition: transform 0.5s;
 }
 
 .submit-button:hover {
-    background: #31279d;
+    background: #31279de0;
     transform: scale(0.98);
 }
 
@@ -264,4 +266,15 @@ body {
     .submit-button {
         margin: 10px 0px;
     }
+}
+/* #msg{
+    color: #61b752;
+    margin-top: -20px;
+    display: block;
+} */
+
+::placeholder {
+    color: #000000a0;
+    font-size: 14px;
+    text-transform: capitalize;
 }
